# nbody_simulation

./: Cargo.toml
simulations_result/: 2_body_stable_1.json  3_body_stable_1.json  no_mass_no_velocity.json  no_mass_with_velocity.json  unstable_1.json  unstable_2.json  unstable_3.json
src/: body.rs  main.rs  physics.rs  simulation.rs  state.rs
