[package]
name = "nbody_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version= "0.32.3", features = ["serde-serialize"] }
serde = "1.0.196"
serde_json = "1.0.112"
rand = "0.8.5"